--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -75,15 +75,17 @@
           </div>
           <span class="text-success">-$5</span>
         </li>
+          {{#categories}}
         <li class="list-group-item d-flex justify-content-between">
-          <span>Категория 5</span>
+          <span>{{name}}</span>
           <strong>$20</strong>
         </li>
+        {{/categories}}
       </ul>
 
       <form class="card p-2">
         <div class="input-group">
-          <button type="submit" class="btn btn-primary btn-block">Добавить категорию</button>
+          <a href="/category" type="submit" class="btn btn-primary btn-block">Добавить категорию</a>
         </div>
       </form>
     </div>
@@ -93,7 +95,7 @@
           <h4 class="mb-3">Задачи</h4>
         </div>
         <div class="col-sm-4">
-          <button type="submit" class="btn btn-primary btn-block">Добавить задачу</button>
+          <a href="/task" type="submit" class="btn btn-primary btn-block">Добавить задачу </a>
         </div>
       </div>
       <table class="table table-hover">
@@ -114,20 +116,23 @@
             <td>@активна</td>
             <td>01.01.2020</td>
           </tr>
+
           <tr>
-            <th scope="row">2</th>
+            <th scope="row">1</th>
             <td>Задача 2</td>
             <td>01.01.2020</td>
             <td>@активна</td>
             <td>01.01.2020</td>
           </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Задача 3</td>
-            <td>01.01.2020</td>
-            <td>@активна</td>
-            <td>01.01.2020</td>
-          </tr>
+          {{#tasks}}
+              <tr>
+                  <th scope="row">{{id}}</th>
+                  <td>{{name}}</td>
+                  <td>{{dateStart}}</td>
+                  <td>@{{status}}</td>
+                  <td>{{dateEnd}}</td>
+              </tr>
+          {{/tasks}}
         </tbody>
       </table>
     </div>
