--- a/src/main/resources/static/css/index-page.css
+++ b/src/main/resources/static/css/index-page.css
@@ -1,5 +1,13 @@
 .container {
-  max-width: 960px;
+  max-width: 1100px;
 }
 
 .lh-condensed { line-height: 1.25; }
+
+.svg-delete:hover {
+	filter: brightness(1.5);
+}
+
+.svg-edit:hover {
+    filter: hue-rotate(45deg);
+}
