--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -44,41 +44,13 @@
     <div class="col-md-4 order-md-2 mb-4">
       <h4 class="d-flex justify-content-between align-items-center mb-3">
         <span class="text-muted">Категории</span>
-        <span class="badge badge-secondary badge-pill">3</span>
+        <span class="badge badge-secondary badge-pill">{{countCategory}}</span>
       </h4>
       <ul class="list-group mb-3">
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-            <h6 class="my-0">Категория 1</h6>
-            <small class="text-muted">Краткое описание</small>
-          </div>
-          <span class="text-muted">$12</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-            <h6 class="my-0">Категория 2</h6>
-            <small class="text-muted">Краткое описание</small>
-          </div>
-          <span class="text-muted">$8</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-            <h6 class="my-0">Категория 3</h6>
-            <small class="text-muted">Краткое описание</small>
-          </div>
-          <span class="text-muted">$5</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between bg-light">
-          <div class="text-success">
-            <h6 class="my-0">Категория 4</h6>
-            <small>EXAMPLECODE</small>
-          </div>
-          <span class="text-success">-$5</span>
-        </li>
           {{#categories}}
         <li class="list-group-item d-flex justify-content-between">
           <span>{{name}}</span>
-          <strong>$20</strong>
+          <strong></strong>
         </li>
         {{/categories}}
       </ul>
@@ -106,24 +78,11 @@
             <th scope="col">Дата начала</th>
             <th scope="col">Статус</th>
             <th scope="col">Дата завершения</th>
+            <th scope="col">Ред.</th>
+            <th scope="col">Уд.</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Задача 1</td>
-            <td>01.01.2020</td>
-            <td>@активна</td>
-            <td>01.01.2020</td>
-          </tr>
-
-          <tr>
-            <th scope="row">1</th>
-            <td>Задача 2</td>
-            <td>01.01.2020</td>
-            <td>@активна</td>
-            <td>01.01.2020</td>
-          </tr>
           {{#tasks}}
               <tr>
                   <th scope="row">{{id}}</th>
@@ -131,6 +90,8 @@
                   <td>{{dateStart}}</td>
                   <td>@{{status}}</td>
                   <td>{{dateEnd}}</td>
+                  <td><a href="task/update/{{id}}"><img class="svg-edit" src="/assets/brand/edit-icon.svg"/></a></td>
+                  <td><a href="task/delete/{{id}}"><img class="svg-delete" src="/assets/brand/delete-icon.svg"/></a></td>
               </tr>
           {{/tasks}}
         </tbody>
